--- a/TestApp/res/layout/weather_fragment.xml
+++ b/TestApp/res/layout/weather_fragment.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/listView1"
+       <FrameLayout
+        android:id="@+id/content_fragment"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </ListView>
-
+        android:layout_weight="1"
+         />
+    
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/buttonSwith"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
