--- a/TestApp/res/layout/current_weather_fragment.xml
+++ b/TestApp/res/layout/current_weather_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
-        android:text="London"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/cityNameTextView"
         android:layout_marginTop="20dp"
-        android:text="temperature value=&quot;8.43&quot; min=&quot;8&quot; max=&quot;9.25&quot;"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
@@ -33,16 +33,6 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/temperatureTextView"
         android:layout_marginTop="16dp"
-        android:text="pressure value=&quot;1012&quot;" />
-
-    <TextView
-        android:id="@+id/lastupdateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/pressureTextView"
-        android:layout_marginTop="20dp"
-        android:text="lastupdate value=&quot;2014-10-14T19:23:54&quot;" />
+        android:text="" />
 
 </RelativeLayout>
